<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_score"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dell.quizapp.ScoreActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_marginLeft"
        android:layout_marginRight="@dimen/text_marginRight"
        android:layout_marginTop="@dimen/text_marginTop"
        android:layout_marginBottom="@dimen/text_marginBottom"
        android:text="@string/username_text"
        android:textColor="@color/textColor"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id="@+id/tvName"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_marginLeft"
        android:layout_marginRight="@dimen/text_marginRight"
        android:layout_marginTop="@dimen/text_marginTop"
        android:layout_marginBottom="@dimen/text_marginBottom"
        android:text="@string/score_text"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="60sp"
        android:id="@+id/tvScore"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_marginLeft"
        android:layout_marginRight="@dimen/text_marginRight"
        android:layout_marginTop="@dimen/text_marginTop"
        android:layout_marginBottom="@dimen/text_marginBottom"
        android:text="@string/result_text"
        android:textColor="@color/textColor"
        android:textAlignment="center"
        android:textSize="30sp"
        android:id="@+id/tvResult"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="@dimen/text_marginTop">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_string"
            android:background="@color/colorPrimary"
            android:id="@+id/btnCalculateScore"
            android:layout_marginTop="@dimen/text_marginTop"
            android:layout_weight="1"/>
        <View
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_string"
            android:background="@color/colorPrimary"
            android:id="@+id/btnShareScore"
            android:layout_marginTop="@dimen/text_marginTop"
            android:layout_weight="1"/>
        <View
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answers_string"
            android:background="@color/colorPrimary"
            android:id="@+id/btnCheck"
            android:layout_marginTop="@dimen/text_marginTop"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>
